# Spectre

./: CHANGELOG.md  README.md  pyproject.toml
docs/: GITHUB_RELEASE_CHECKLIST.md  NEXT_STEPS.md
spectre/: crypto_engine.py
spectre/analysis/file/: native.py
spectre/core/: artifacts.py  autodetect.py  reporting.py  summary.py
spectre/plugins/file/: file_analysis.py
spectre/plugins/technical/: github_repo_analysis.py  technology_fingerprint.py
spectre/sources/github/: adapter.py
tests/: test_autodetect.py  test_crypto_engine.py  test_reporting.py
