[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spectre-cyber"
version = "0.1.0"
description = "Command-line tool for first-pass cybersecurity analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "SPECTRE Maintainer"}]
keywords = ["cybersecurity", "forensics", "osint", "reconnaissance", "ctf", "cryptography", "malware-analysis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dns = ["dnspython>=2.6"]
dev = []

[project.urls]
Homepage = "https://github.com/your-username/spectre"
Documentation = "https://github.com/your-username/spectre/tree/main/docs"
Issues = "https://github.com/your-username/spectre/issues"
Source = "https://github.com/your-username/spectre"

[project.scripts]
spectre = "spectre.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["spectre*"]
